# sitta

./: .gitignore  API_AND_UI_PLAN.md  Cargo.toml  INFERENCE_BACKENDS.md  JOURNAL.md  MQTT_PLAN.md  README.md  SCHEMA_DESIGN_PROMPT.md  SETTINGS_PLAN.md  STORE_IMPLEMENTATION_PLAN.md  VISION.md  config.toml
.sqlx/: query-03e4529333862a8688f45402171372d4a10eb3b3a2a30b9dfff0a6a0b4cd3253.json  query-049b9dcf5cc701464439467204acdbe8edb00c9e021c9dfefc7c9d97b7123d01.json  query-06726254143c57e532126fdf970c6958270c99cd47e93b854f93b19fb4ac031e.json  query-07086f54be595b8f1abd3bb14c74a45a80646de117b8f33621cadf391e8f353e.json  query-09f8885f982fc2b288ba64e4c60c47b0a54e773f0a174392cb2a97ffdcfbdb3d.json  query-0ccc83355f00d2378b7a17c3f070099e70214619233d962e101fe09f37bce269.json  query-0f53104a434a320a5b673e155f077145881d21226bc0eecdfd6c67c362274717.json  query-1165c29ac71138de55a6186a14a548e487b966847387490a9cb52847bcf28efb.json  query-191764d4d8233c4729b3c01527290a2ea14d80bfa31c1b9c7892385d42fea30a.json  query-1ece6130dac6f30da1bbee11abf36c1b74ffa249334ccd41b238619bb74ffaa6.json  query-242465c9f170b6dfbed11ac37a24e8a8fbc03475b357c59cbda3af8fb4118a0a.json  query-274823394e21fb780f531c22b98b11444f24d9dd7cd360da995d0c5789cb6d76.json  query-2867b19bb3aef3935f5d9a38226aaf4af1454a54286499fb2ba7ae22feb0c935.json  query-2dbd7eba1e7d4d679047140e62aa9e61bd963f95323be18c5e622f769fae95c5.json  query-2dbef9ed3c24b9cee64d081cf43f94082a7766364ad4d9bf81a9e543daa9f59d.json  query-2e0e897d709c31a95e87bf20e609a0a331ffdbeeaa845773cd863fd9ee41891b.json  query-301d34c43a591219652d208bc0004934aa5f21e8053789c9e05a5970ad2bf490.json  query-30c9dcfe817501c75563e96197a19c9dfb5ed4d4abd9026788d900453b897a90.json  query-372640520b2132dfa3e09466cdaaa135308f721f2683e862558dbfa02f61d3ce.json  query-37628ea45c043ac76ad439d1362a533546da73dbd84a1edd2bf1e5a5a8b0135c.json  query-3d3d51fc4f6b8530605742663412a1a1af9a210e3db6c1fc3d5c82ee86996a82.json  query-4131d87f668a34e6b993b3229a9ff15fb30df5b8c23c36211d7b63242159caa4.json  query-416b5bee7c205915fec7886d28137b301121857ee34197b93c3237b46976811f.json  query-45710a7f4e1c0c5cf997941e3b726879062d63d61d52f7441737c5e72cd7e30c.json  query-466b46863d5a4af902f3456398d64786da25f62e13b582f67e41ecc62ec99df2.json  query-49b2902279f2e1435c17a7d544ef9c2dbaf7c074aa0bf4c3f0d36149884adb1f.json  query-4a2f2d69e72e5989b511653bc31113755683ceb4e2d4705f6e02a367e5d862cb.json  query-4aa1b9564212b5abea43c34245a717f77f1eeefd413781ed08ac95bc4c182351.json  query-4b374d3734fbfe536624ca792d64d7516d749116c5a43d07c8988cce9bdf5928.json  query-4b3dd988f4fa18e6d29486fd6aec44c6974f1fce2edad5eac7aeb7327c1d515a.json  query-520a165479dbbc6d63e047d1e92e95939472e72033edfff28f5127cf9bcd9282.json  query-52a745a2d348c9f202100474aef16429d6418969a8e189d60a543eaa365a344c.json  query-55941077c2883d4acaf130eb7d7acd745d46b1009ca786b905ec64b941846f2b.json  query-581cd1a369f5aa85af2cde0ef71dc4e2e534a9d25cef150f275a90b30b0178e4.json  query-5c5a428029cc29b040a9e6ec69284f6c34066a1bd34bb628ec1b729741d4723c.json  query-5d6bcdf1d01b1415d756ded6d478b8a1c2e967ebaff611666317ab66a6280ce8.json  query-6549856c62792c8664bac3a86a9c88b17c678ef81ba002dab49e560d520976fc.json  query-6bac8cc96d35371f953f3eb8cd218e4d27eb962e927a5eeb55db2f19f731daac.json  query-6e48e2298752445daf80326976c6d3b7419addf1c2dbb674182085bdc3754291.json  query-712c37b9e75e6d70ea0d39a61866e441fb992ca7fdb70f52274e1dea9bec78d0.json  (+56 more)
sitta-api/: Cargo.toml
sitta-api/src/: dashboard.rs  event.rs  lib.rs  server.rs  settings.rs  visualization.rs
sitta-api/src/dashboard/: detection.rs  diagnostics.rs  individuals.rs  live.rs  rare.rs  settings_page.rs  species.rs  species_detail.rs  status.rs  today.rs
sitta-api/src/server/: audio_health.rs  individuals.rs  pages.rs  species.rs
sitta-api/tests/: settings_tests.rs
sitta-audio/: Cargo.toml
sitta-audio/src/: chunk.rs  lib.rs  manager.rs  remote.rs  rtsp.rs  source.rs  spectrogram.rs  wav.rs
sitta-bin/: Cargo.toml
sitta-bin/src/: config.rs  consumers.rs  effort.rs  main.rs  models.rs  mqtt.rs  persist.rs  seed.rs  snippets.rs
sitta-inference/: Cargo.toml
sitta-inference/examples/: test_birdnet.rs  test_perch.rs
sitta-inference/src/: birdnet.rs  lib.rs  model.rs  rangefilter.rs
sitta-spatial/: Cargo.toml
sitta-spatial/src/: lib.rs
sitta-store/: Cargo.toml  schema.sql
sitta-store/migrations/: 20260417000000_initial_schema.sql  20260418000000_candidate_clustering.sql  20260419000000_detection_rarity.sql  20260420000000_source_sessions.sql  20260421000000_detection_range_status.sql  20260502000000_backfill_binomial_labels.sql  20260504000000_lifetime_metrics.sql  20260516000000_drop_non_species_rarity.sql  20260516010000_backfill_rarity_pre_scoring.sql
sitta-store/src/: clustering.rs  db.rs  lib.rs  matcher.rs  models.rs
sitta-store/src/db/: candidates.rs  clustering.rs  detections.rs  individuals.rs  metrics.rs  mod.rs  rarity.rs  reviews.rs  seeding.rs  sessions.rs  snippets.rs  species.rs
sitta-store/tests/: read_queries.rs  roundtrip.rs
sitta-taxonomy/: Cargo.toml
sitta-taxonomy/src/: lib.rs
