[workspace]
members = [
    "sitta-audio",
    "sitta-inference",
    "sitta-taxonomy",
    "sitta-store",
    "sitta-api",
    "sitta-spatial",
    "sitta-bin",
]
resolver = "3"

[workspace.package]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23", features = ["v5", "v7"] }
bytemuck = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1"
anyhow = "1.0.102"
rubato = "2.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
serde_json = "1.0"
axum = "0.8"
async-stream = "0.3"
arc-swap = "1"
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
bytes = "1"
rustfft = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
