[package]
name = "sitta-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
futures-core = "0.3"
uuid = { workspace = true }
arc-swap = { workspace = true }
toml_edit = { workspace = true }
toml = { workspace = true }
sitta-store = { path = "../sitta-store" }
