[package]
name = "sitta-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
axum = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
futures-core = "0.3"
uuid = { workspace = true }
arc-swap = { workspace = true }
toml_edit = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
async-trait = { workspace = true }
sitta-audio = { path = "../sitta-audio" }
sitta-store = { path = "../sitta-store" }

[dev-dependencies]
tempfile = "3"
