[package]
name = "sitta-audio"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
