[package]
name = "sitta-bin"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "sitta"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
sitta-audio = { path = "../sitta-audio" }
sitta-inference = { path = "../sitta-inference" }
sitta-taxonomy = { path = "../sitta-taxonomy" }
sitta-store = { path = "../sitta-store" }
sitta-api = { path = "../sitta-api" }
rubato = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sitta-taxonomy = { path = "../sitta-taxonomy", features = ["test-util"] }
