[package]
name = "sitta-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
birdnet-onnx = { version = "2.0.0-rc.13", default-features = false }
sitta-taxonomy = { path = "../sitta-taxonomy" }

[features]
default = []
load-dynamic = ["birdnet-onnx/load-dynamic"]
cuda = ["birdnet-onnx/cuda"]
